remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -68,28 +68,28 @@
         "name": "Events Form",
         "milestones": [
             {
-                "milestone_date": "2020-02-14",
-                "description": "Beta version of Event Form Ready for testing",
+                "milestone_date": "2020-03-06",
+                "description": "Post-launch fixes complete",
                 "owner": "Simon",
                 "project_name": "Events Form",
-                "status": "overdue"
+                "status": "on-time"
             },
             {
-                "milestone_date": "2020-02-21",
-                "description": "Release Candiate of Form ready for regression testing",
+                "milestone_date": "2020-03-06",
+                "description": "Google Sheet Template",
+                "owner": "Mike",
+                "project_name": "Events Form",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-03-13",
+                "description": "Google Sheet push implemented, tested, and in production",
                 "owner": "Simon",
                 "project_name": "Events Form",
-                "status": "overdue"
+                "status": "on-time"
             },
             {
-                "milestone_date": "2020-03-01",
-                "description": "Launch form with Global AppSec - Dublin as first product",
-                "owner": "Harold",
-                "project_name": "Events Form",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-03-07",
+                "milestone_date": "2020-03-18",
                 "description": "Project Complete",
                 "owner": "Harold",
                 "project_name": "Events Form",
@@ -149,7 +149,7 @@
                 "description": "move VMs not in DigitalOcean to DigitalOcean",
                 "owner": "No Owner",
                 "project_name": "DNS and VM Migration",
-                "status": "future"
+                "status": "on-time"
             }
         ],
         "description": "The DNS, name provider, and virtual machine infrastructure currently resides on several different platforms.  In addition, the website redirection currently is at an elevated risk due to a single point of failure.  In order to consolidate our platforms and mitigate the risk, the VM infrastructure will be moved to DigitalOcean, the name provider will shift to Namecheap, and the DNS and redirect infrastructure will be moved to Cloudflare.",
@@ -335,22 +335,6 @@
         "url": "https://owasp.org/www-staff/projects/202002-Projects-Summit-Q1"
     },
     {
-        "name": "Staff Summit - Winter 2020",
-        "milestones": [],
-        "description": "The OWASP Foundation will host a two-day staff summit in conjunction with the Projects Summit in Cancun, Mexico, February 27-29, 2020. Arrival day will be Wednesday the 26th and departures will be Saturday the 29th.",
-        "leaders": [
-            {
-                "name": "Project - Mike McCamon",
-                "email": "mike.mccamon@owasp.com"
-            },
-            {
-                "name": "Venue - Emily Berman",
-                "email": "emily.berman@owasp.com"
-            }
-        ],
-        "url": "https://owasp.org/www-staff/projects/202002-staff-summit"
-    },
-    {
         "name": "OWASP SnowFROC",
         "milestones": [
             {
@@ -415,25 +399,11 @@
                 "status": "overdue"
             },
             {
-                "milestone_date": "2020-02-29",
-                "description": "Close CFT/CFP",
-                "owner": "Emily",
-                "project_name": "Global AppSec - Dublin 2020",
-                "status": "overdue"
-            },
-            {
                 "milestone_date": "2020-03-01",
-                "description": "Keynotes Announces",
+                "description": "Keynotes Announced",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2020",
                 "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-03-09",
-                "description": "Registration Opens",
-                "owner": "Emily",
-                "project_name": "Global AppSec - Dublin 2020",
-                "status": "on-time"
             },
             {
                 "milestone_date": "2020-03-15",
@@ -678,14 +648,21 @@
         "name": "DEFCON 28",
         "milestones": [
             {
-                "milestone_date": "2020-03-01",
-                "description": "Call for Vendors application will be accepted",
-                "owner": "No Owner",
+                "milestone_date": "2020-03-06",
+                "description": "arrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0",
+                "owner": "Mike",
                 "project_name": "DEFCON 28",
-                "status": "overdue"
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-03-05",
+                "description": "Submission of Vendor Application",
+                "owner": "Lisa",
+                "project_name": "DEFCON 28",
+                "status": "on-time"
             }
         ],
-        "description": "Each project will have a 2-3 paragraph overview narrative. Keep to the key top points about the project. Visitors should be able to read this short narrative and have a good understanding of the project without having to scroll the entire document.",
+        "description": "- 25K to 28K Attendees previous year- CASH ONLY- NO pre-registration- $320 per Badge - ONLY ONE BADGE AVAILABLE for Event- NO DISCOUNTS",
         "leaders": [
             {
                 "name": "Lisa Jones",
