--- a/_data/projects.json
+++ b/_data/projects.json
@@ -79,7 +79,7 @@
                 "description": "Google Sheet push implemented, tested, and in production",
                 "owner": "Simon",
                 "project_name": "Events Form",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-03-18",
