--- a/_data/projects.json
+++ b/_data/projects.json
@@ -389,7 +389,7 @@
                 "description": "Hotel Attrition Milestone, OSD-3266",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-05-14",
